--- a/MyRecreativa/app/src/main/res/layout/trivial_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/trivial_fragment.xml
@@ -9,10 +9,10 @@
         android:id="@+id/imageView"
         android:layout_width="232dp"
         android:layout_height="223dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintEnd_toEndOf="@+id/countdownBar"
-        app:layout_constraintStart_toStartOf="@+id/countdownBar"
-        app:layout_constraintTop_toBottomOf="@+id/countdownBar"
+        android:layout_marginTop="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/timerBar"
+        app:layout_constraintStart_toStartOf="@+id/timerBar"
+        app:layout_constraintTop_toBottomOf="@+id/timerBar"
         tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
@@ -69,15 +69,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/countdownBar"
-        android:layout_width="390dp"
-        android:layout_height="9dp"
-        android:layout_marginStart="5dp"
+    <ProgressBar
+        android:id="@+id/timerBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="397dp"
+        android:layout_height="16dp"
         app:layout_constraintEnd_toEndOf="@+id/time"
-        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="@+id/time"
-        app:layout_constraintTop_toBottomOf="@+id/time"
-        app:srcCompat="@color/design_default_color_secondary_variant" />
+        app:layout_constraintTop_toBottomOf="@+id/time" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
