--- a/MyRecreativa/app/src/main/res/layout/mode_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/mode_fragment.xml
@@ -1,28 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/modeLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/game_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="66dp"
+        android:layout_marginEnd="137dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="TextView"
-        android:textSize="34sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        android:textColor="#FFFFFF"
+        android:textSize="48sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/mode2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="356dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/game_title"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="@+id/game_title"
         app:layout_constraintTop_toBottomOf="@+id/game_title" />
 
@@ -35,7 +41,7 @@
         android:layout_marginEnd="45dp"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.958"
         app:layout_constraintStart_toEndOf="@+id/mode2"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -48,7 +54,7 @@
         android:layout_marginEnd="23dp"
         android:text="Button"
         app:layout_constraintEnd_toStartOf="@+id/mode2"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -61,14 +67,5 @@
         app:layout_constraintEnd_toEndOf="@+id/mode2"
         app:layout_constraintStart_toStartOf="@+id/mode2"
         app:layout_constraintTop_toBottomOf="@+id/mode2" />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="406dp"
-        android:layout_height="191dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
