Fragment modo de juego y fin de juego para buscaminas, fragment mode generico para todos los juegos, limpieza de codigo y json para las demas opciones del trivial.

--- a/MyRecreativa/app/src/main/res/layout/mode_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/mode_fragment.xml
@@ -6,6 +6,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/mode3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="55dp"
+        android:layout_marginTop="356dp"
+        android:layout_marginEnd="69dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/mode2"
+        app:layout_constraintTop_toBottomOf="@+id/game_title" />
+
+    <Button
+        android:id="@+id/mode1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="70dp"
+        android:layout_marginTop="356dp"
+        android:layout_marginEnd="35dp"
+        android:text="Button"
+        app:layout_constraintEnd_toStartOf="@+id/mode2"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/game_title" />
+
     <TextView
         android:id="@+id/game_title"
         android:layout_width="wrap_content"
@@ -31,32 +56,6 @@
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="@+id/game_title"
         app:layout_constraintTop_toBottomOf="@+id/game_title" />
-
-    <Button
-        android:id="@+id/mode3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="504dp"
-        android:layout_marginEnd="45dp"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.958"
-        app:layout_constraintStart_toEndOf="@+id/mode2"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/mode1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="504dp"
-        android:layout_marginEnd="23dp"
-        android:text="Button"
-        app:layout_constraintEnd_toStartOf="@+id/mode2"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/play"
