--- a/MyRecreativa/app/src/main/res/layout/trivial_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/trivial_fragment.xml
@@ -20,6 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:text="TextView"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/questionImg"
