Arreglos, scoreFragment, trivialFragment, Memory Game y Mode fragment

--- a/MyRecreativa/app/src/main/res/layout/memory_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/memory_fragment.xml
@@ -1,15 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <GridLayout
         android:id="@+id/gridLayout_memoryGame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="600dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="10dp"
         android:columnCount="4"
         android:rowCount="4"
-        android:padding="16dp" />
+        app:layout_constraintEnd_toEndOf="@+id/timer_memory_game"
+        app:layout_constraintStart_toStartOf="@+id/timer_memory_game"
+        app:layout_constraintTop_toBottomOf="@+id/timer_memory_game" />
+
+    <TextView
+        android:id="@+id/timer_memory_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/bakbak_one"
+        android:text="TextView"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
