--- a/MyRecreativa/app/src/main/res/layout/mode_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/mode_fragment.xml
@@ -13,7 +13,9 @@
         android:layout_marginStart="55dp"
         android:layout_marginTop="356dp"
         android:layout_marginEnd="69dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Button"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/mode2"
         app:layout_constraintTop_toBottomOf="@+id/game_title" />
@@ -24,8 +26,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="70dp"
         android:layout_marginTop="356dp"
-        android:layout_marginEnd="35dp"
+        android:layout_marginEnd="25dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Button"
+        android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/mode2"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,7 +55,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="356dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Button"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@+id/game_title"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="@+id/game_title"
@@ -62,7 +68,9 @@
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_marginTop="50dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Play"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/mode2"
         app:layout_constraintStart_toStartOf="@+id/mode2"
         app:layout_constraintTop_toBottomOf="@+id/mode2" />
