--- a/MyRecreativa/app/src/main/res/layout/score_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/score_fragment.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="136dp"
         android:layout_marginTop="49dp"
         android:layout_marginEnd="137dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="TextView"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,8 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="TextView"
-        android:textSize="30sp"
+        android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="@+id/tvGameNameScore"
         app:layout_constraintStart_toStartOf="@+id/tvGameNameScore"
         app:layout_constraintTop_toBottomOf="@+id/tvGameNameScore" />
@@ -35,8 +37,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="TextView"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="@+id/tvGameStatus"
         app:layout_constraintStart_toStartOf="@+id/tvGameStatus"
         app:layout_constraintTop_toBottomOf="@+id/tvGameStatus" />
@@ -45,7 +48,8 @@
         android:id="@+id/playAgainButton"
         android:layout_width="228dp"
         android:layout_height="56dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="190dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/tvLastGameScore"
         app:layout_constraintStart_toStartOf="@+id/tvLastGameScore"
@@ -56,6 +60,7 @@
         android:layout_width="228dp"
         android:layout_height="56dp"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/playAgainButton"
         app:layout_constraintStart_toStartOf="@+id/playAgainButton"
