--- a/MyRecreativa/app/src/main/res/layout/trivial_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/trivial_fragment.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/bakbak_one"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
         android:text="TextView"
@@ -33,6 +34,7 @@
         android:layout_width="356dp"
         android:layout_height="57dp"
         android:layout_marginTop="50dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/question"
         app:layout_constraintStart_toStartOf="@+id/question"
@@ -43,6 +45,7 @@
         android:layout_width="356dp"
         android:layout_height="57dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/option1"
         app:layout_constraintStart_toStartOf="@+id/option1"
@@ -53,6 +56,7 @@
         android:layout_width="356dp"
         android:layout_height="57dp"
         android:layout_marginTop="20dp"
+        android:fontFamily="@font/bakbak_one"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/option2"
         app:layout_constraintStart_toStartOf="@+id/option2"
