Implementacion puntaje en contecta4
Ahora el score incrementa cada vez que reinicias el
juego hasta terminar el juego que lo vuelve a setear a 0

--- a/MyRecreativa/app/src/main/res/layout/conecta_cuatro.xml
+++ b/MyRecreativa/app/src/main/res/layout/conecta_cuatro.xml
@@ -7,7 +7,6 @@
 
 
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -40,6 +39,14 @@
             android:layout_height="wrap_content"
             android:text="Reiniciar Juego"
             android:layout_marginTop="16dp"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/resetButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Reiniciar Juego"
             android:visibility="gone" />
     </LinearLayout>
 
