--- a/MyRecreativa/app/src/main/res/values/colors.xml
+++ b/MyRecreativa/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="cell_hit">#FF0000</color>
+    <color name="cell_miss">#0000FF</color>
+    <color name="cell_default">#A9A9A9</color>
 </resources>
