--- a/MyRecreativa/app/src/main/res/layout/item_game.xml
+++ b/MyRecreativa/app/src/main/res/layout/item_game.xml
@@ -44,10 +44,10 @@
 
                 <ImageButton
                     android:id="@+id/favButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
                     android:layout_weight="1"
-                    app:srcCompat="@drawable/ic_menu_camera" />
+                    android:background="@drawable/heart_outline"/>
 
                 <Button
                     android:id="@+id/playButton"
