--- a/MyRecreativa/app/src/main/res/layout/score_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/score_fragment.xml
@@ -6,6 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/score_banner"
+        android:layout_width="412dp"
+        android:layout_height="150dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
+
     <TextView
         android:id="@+id/tvGameNameScore"
         android:layout_width="wrap_content"
@@ -21,18 +31,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvGameStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:fontFamily="@font/bakbak_one"
-        android:text="TextView"
-        android:textSize="48sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvGameNameScore"
-        app:layout_constraintStart_toStartOf="@+id/tvGameNameScore"
-        app:layout_constraintTop_toBottomOf="@+id/tvGameNameScore" />
-
-    <TextView
         android:id="@+id/tvLastGameScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -40,15 +38,15 @@
         android:fontFamily="@font/bakbak_one"
         android:text="TextView"
         android:textSize="34sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvGameStatus"
-        app:layout_constraintStart_toStartOf="@+id/tvGameStatus"
-        app:layout_constraintTop_toBottomOf="@+id/tvGameStatus" />
+        app:layout_constraintEnd_toEndOf="@+id/isWin_img"
+        app:layout_constraintStart_toStartOf="@+id/isWin_img"
+        app:layout_constraintTop_toBottomOf="@+id/isWin_img" />
 
     <Button
         android:id="@+id/playAgainButton"
         android:layout_width="228dp"
         android:layout_height="56dp"
-        android:layout_marginTop="190dp"
+        android:layout_marginTop="50dp"
         android:fontFamily="@font/bakbak_one"
         android:text="Button"
         app:layout_constraintEnd_toEndOf="@+id/tvLastGameScore"
@@ -65,4 +63,16 @@
         app:layout_constraintEnd_toEndOf="@+id/playAgainButton"
         app:layout_constraintStart_toStartOf="@+id/playAgainButton"
         app:layout_constraintTop_toBottomOf="@+id/playAgainButton" />
+
+    <ImageView
+        android:id="@+id/isWin_img"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="70dp"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="@+id/tvGameNameScore"
+        app:layout_constraintStart_toStartOf="@+id/tvGameNameScore"
+        app:layout_constraintTop_toBottomOf="@+id/tvGameNameScore"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
