Limpieza de codigo y java docs

--- a/MyRecreativa/app/src/main/res/layout/score_fragment.xml
+++ b/MyRecreativa/app/src/main/res/layout/score_fragment.xml
@@ -8,7 +8,7 @@
 
     <ImageView
         android:id="@+id/score_banner"
-        android:layout_width="412dp"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
